refactor order processing; integrate cart service, update order timestamps, and adjust request DTOs